--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title></title>
-	<link rel="manifest" href="js/manifest.json">
+	<title>Portfolio</title>
+	<meta name="theme-color" content="rgba(10, 86, 208, 1.0)"/>
 	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+	<script type="application/json" src="js/manifest.json?a=baaa"></script>
 	<script type="text/javascript" src='js/jquery.js'></script>
 	<script type="text/javascript" src='js/jquery_colors.js'></script>
-	<script type="text/javascript" src='js/script.js'></script>
+	<script type="text/javascript" src='js/script.js?a=baaa'></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
 	<div id="header">Portfolio</div>
+	
+	<div id="add_content">+</div>
+
+	<div id="content"></div>
 	
 </body>
 </html>
