colorify.js set a background color matching the crypto image for each of the wallets listed

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	<script type="application/json" src="js/manifest.json?a=baaa"></script>
 	<script type="text/javascript" src='js/jquery.js'></script>
 	<script type="text/javascript" src='js/jquery_colors.js'></script>
+	<script type="text/javascript" src='js/colorify.js'></script>
 	<script type="text/javascript" src='js/script.js?a=baaa'></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/colorify.css">
 </head>
 <body>
 
